[package]
name = "blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = { git = "https://github.com/tfx2001/riscv-rt", branch = "master" }
panic-halt = "0.2"

[dependencies.hpm6750-rs]
path = "../hpm6750-rs"
features = ["rt", "critical-section"]
