[package]
authors = ["tfx2001 <tfx2001@outlook.com>"]
edition = "2021"
name = "hpm6750-rs"
version = "0.1.0"

[dependencies]
critical-section = { version = "1.1", optional = true }
riscv = { version = "0.10" }
riscv-rt = { git = "https://github.com/tfx2001/riscv-rt", branch = "master",  optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt", "riscv/critical-section-single-hart"]
